--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -5,3 +5,4 @@
 @import 'components/flash';
 @import 'components/modal';
 @import 'components/vault-initializer';
+@import 'components/vault-unsealer';
