--- a/app/templates/components/vault-unsealer.hbs
+++ b/app/templates/components/vault-unsealer.hbs
@@ -1,1 +1,26 @@
-{{yield}}
+<form {{action "unsealVault" on="submit"}}>
+  <div class="vault-unsealer">
+    <h3>Unseal the Vault</h3>
+
+    {{#if error}}
+      <div class="flash-error">
+        {{error}}
+      </div>
+    {{/if}}
+
+    <p>{{progress}} keys have been provided.</p>
+    <p>{{threshold}} keys are needed to unlock.</p>
+
+    <div class="parameter">
+      <label>
+        Unseal key
+        {{input type="text" value=key class="parameter__input"}}
+      </label>
+    </div>
+
+    <div>
+      <button {{action "resetUnseal" on="click"}}>Reset Unseal Process</button>
+      {{input type="submit" value="Unseal"}}
+    </div>
+  </div>
+</form>
