--- a/app/templates/unseal.hbs
+++ b/app/templates/unseal.hbs
@@ -1,1 +1,1 @@
-{{vault-unsealer progress=model.progress threshold=model.t}}
+{{vault-unsealer progress=model.progress threshold=model.t onUnseal=(action 'didUnseal')}}
