Unseal process resetting.

--- a/app/templates/components/vault-unsealer.hbs
+++ b/app/templates/components/vault-unsealer.hbs
@@ -19,7 +19,7 @@
     </div>
 
     <div>
-      <!--<button disabled="disabled" {{action "resetUnseal" on="click"}}>Reset Unseal Process</button>-->
+      <button {{action "resetUnseal" on="click"}}>Reset Unseal Process</button>
       {{input type="submit" value="Unseal"}}
     </div>
   </div>
