--- a/app/templates/components/vault-unsealer.hbs
+++ b/app/templates/components/vault-unsealer.hbs
@@ -14,7 +14,7 @@
     <div class="parameter">
       <label>
         Unseal key
-        {{input type="text" value=key class="parameter__input"}}
+        {{input type="text" value=key class="parameter__input key-input"}}
       </label>
     </div>
 
