Add navigation menu.

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,9 +1,11 @@
 @import 'normalize';
 @import 'bourbon/bourbon';
 @import 'base';
+@import 'neat/neat';
 
 @import 'components/auth-backends';
 @import 'components/flash';
 @import 'components/modal';
+@import 'components/navigation';
 @import 'components/vault-initializer';
 @import 'components/vault-unsealer';
