--- a/app/templates/secrets.hbs
+++ b/app/templates/secrets.hbs
@@ -1,11 +1,23 @@
-<ul>
-{{#each model.data.keys as |secret_key|}}
-  {{#if secret_key}}
-  <li>{{#link-to 'secrets.show' secret_key}}{{secret_key}}{{/link-to}}</li>
-  {{/if}}
-{{else}}
-  <li><h2>No secrets</h2></li>
-{{/each}}
-</ul>
-
-{{outlet}}
+<div class="secrets-list">
+  <div class="left-column">
+    <h2>Login list</h2>
+    <div class="actions">
+      {{#link-to 'secrets.create'}}
+        <i class="fa fa-plus-circle"></i>
+        Create login
+      {{/link-to}}
+    </div>
+    <ul>
+    {{#each model.data.keys as |secret_key|}}
+      {{#if secret_key}}
+      <li>{{#link-to 'secrets.show' secret_key}}{{secret_key}}{{/link-to}}</li>
+      {{/if}}
+    {{else}}
+      <li><h2>No logins</h2></li>
+    {{/each}}
+    </ul>
+  </div>
+  <div class="right-column">
+    {{outlet}}
+  </div>
+</div>
