--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,11 +1,13 @@
 @import 'normalize';
 @import 'bourbon/bourbon';
-@import 'base';
 @import 'neat/neat';
+@import 'base';
+@import 'font-awesome/font-awesome';
 
 @import 'components/auth-backends';
 @import 'components/flash';
 @import 'components/modal';
 @import 'components/navigation';
+@import 'components/secrets-list';
 @import 'components/vault-initializer';
 @import 'components/vault-unsealer';
