Start on secret create form.

--- a/app/templates/components/navigation-menu.hbs
+++ b/app/templates/components/navigation-menu.hbs
@@ -16,7 +16,7 @@
             <img src="https://raw.githubusercontent.com/thoughtbot/empties/master/source/images/placeholder.png" alt="Logo image">
           {{/link-to}}
         </li>
-        <li class="nav-link">{{#link-to 'secrets'}}Secrets{{/link-to}}</li>
+        <li class="nav-link">{{#link-to 'secrets'}}Logins{{/link-to}}</li>
       </ul>
     </nav>
   </div>
