--- a/app/templates/secrets.hbs
+++ b/app/templates/secrets.hbs
@@ -2,7 +2,7 @@
   <div class="left-column">
     <h2>Login list</h2>
     <div class="actions">
-      {{#link-to 'secrets.create'}}
+      {{#link-to 'secrets.new'}}
         <i class="fa fa-plus-circle"></i>
         Create login
       {{/link-to}}
