--- a/app/templates/secrets/new.hbs
+++ b/app/templates/secrets/new.hbs
@@ -1,5 +1,26 @@
+{{#if error}}
+  <div class="flash-error">
+    {{error}}
+  </div>
+{{/if}}
+
 <form {{action 'createSecret' on='submit'}}>
   <label>Login name
     {{input type="text" value=name placeholder="Login name"}}
+
   </label>
+  <label>
+    URL
+    {{input type="url" value=url placeholder="Host of login's website"}}
+  </label>
+  <label>
+    Username
+    {{input type="email" value=username}}
+  </label>
+  <label>
+    Password
+    {{input type="password" value=password}}
+  </label>
+
+  {{input type="submit" value="Create login"}}
 </form>
