--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -8,6 +8,7 @@
 @import 'components/flash';
 @import 'components/modal';
 @import 'components/navigation';
+@import 'components/secret-item';
 @import 'components/secrets-list';
 @import 'components/vault-initializer';
 @import 'components/vault-unsealer';
