--- a/app/templates/secrets/show.hbs
+++ b/app/templates/secrets/show.hbs
@@ -1,6 +1,3 @@
 {{log model}}
 
-{{#each model as |kvp|}}
-  {{log kvp}}
-  {{kvp.[0]}}: {{kvp.[1]}}
-{{/each}}
+{{secret-item url=model.data.url username=model.data.username password=model.data.password}}
