Redirect after logout.

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,4 +1,4 @@
-{{navigation-menu}}
+{{navigation-menu onLogout=(action 'loggedOut')}}
 
 {{#if session.isAuthenticated }}
   {{#if session.data.isRoot }}
