--- a/app/templates/secrets.hbs
+++ b/app/templates/secrets.hbs
@@ -10,7 +10,13 @@
     <ul>
     {{#each model.data.keys as |secret_key|}}
       {{#if secret_key}}
-      <li>{{#link-to 'secrets.show' secret_key}}{{secret_key}}{{/link-to}}</li>
+      <li>
+        {{#link-to 'secrets.show' secret_key}}{{secret_key}}{{/link-to}}
+        <a class="delete-link" {{action 'deleteSecret' secret_key}}>
+          <i class="fa fa-minus-circle"></i>
+          Delete
+        </a>
+      </li>
       {{/if}}
     {{else}}
       <li><h2>No logins</h2></li>
