--- a/app/templates/components/navigation-menu.hbs
+++ b/app/templates/components/navigation-menu.hbs
@@ -17,6 +17,7 @@
           {{/link-to}}
         </li>
         <li class="nav-link">{{#link-to 'secrets'}}Logins{{/link-to}}</li>
+        <li class="nav-link">{{#link-to 'users'}}Manage Users{{/link-to}}</li>
       </ul>
     </nav>
   </div>
