--- a/app/templates/secrets/new.hbs
+++ b/app/templates/secrets/new.hbs
@@ -15,7 +15,7 @@
   </label>
   <label>
     Username
-    {{input type="email" value=username}}
+    {{input type="text" value=username}}
   </label>
   <label>
     Password
