--- a/app/templates/login/token.hbs
+++ b/app/templates/login/token.hbs
@@ -6,7 +6,7 @@
 
 <form {{action 'loginToken' on='submit'}}>
   <label for="token-input">Token</label>
-  {{input type='text' value=token class="token-input"}}
+  {{input type='text' value=token name="token-input"}}
 
   {{input type='submit' value='Log in'}}
 </form>
